# inventory

./: .gitignore  README.md  cli.py  products.json.example  pyproject.toml
core/: ai_utils.py  product_repository.py  product_service.py
inventory/: __init__.py  __main__.py
