[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory"
version = "0.1.0"
description = "Inventory Management Application"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}

[project.scripts]
inventory = "inventory.__main__:main"
